RESOLVED FIXED270041
[UnifiedPDF] There's a tile flicker after resizing has finished
https://bugs.webkit.org/show_bug.cgi?id=270041
Summary [UnifiedPDF] There's a tile flicker after resizing has finished
Simon Fraser (smfr)
Reported 2024-02-24 10:51:36 PST
When resizing the window, there's an extra tile flicker (async tile paint) after the resize has finished.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-24 10:51:47 PST
Simon Fraser (smfr)
Comment 2 2024-02-24 22:14:22 PST
This flicker is caused by tile resizing which throws away all the cached tiles.
Sammy Gill
Comment 3 2024-05-23 15:06:28 PDT Comment hidden (obsolete)
Abrar Rahman Protyasha
Comment 4 2024-08-20 00:59:53 PDT Comment hidden (obsolete)
Abrar Rahman Protyasha
Comment 5 2024-09-20 16:39:43 PDT Comment hidden (obsolete)
Abrar Rahman Protyasha
Comment 6 2024-10-02 18:05:18 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 7 2024-10-14 17:39:23 PDT
EWS
Comment 8 2024-10-14 20:05:37 PDT
Committed 285170@main (ea9faa806d56): <https://commits.webkit.org/285170@main> Reviewed commits have been landed. Closing PR #35189 and removing active labels.
EWS
Comment 9 2024-10-22 15:21:56 PDT
Committed 283286.341@safari-7620-branch (f567de2c2df1): <https://commits.webkit.org/283286.341@safari-7620-branch> Reviewed commits have been landed. Closing PR #2069 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.