[UnifiedPDF] Low resolution background layer is flickered after resizing has finished. https://bugs.webkit.org/show_bug.cgi?id=270041 rdar://123566595

Reviewed by NOBODY (OOPS!).

The TiledBacking has a set of callbacks it uses to inform its client, in
this case the async renderer, of various tile grid mutations. One mutation
that is particularly problematic is changing the tiling scale factor.
This causes the TiledBacking to execute a series of its callbacks which
has the async renderer throw away its cached tile renderings. This
results in a flickering of the low resolution page background layer
while it waits for new content to get rendered.

At a high level, in order to fix the occurrence of this flickering we
must keep around and keep painting the old tiles while we wait for the
new content to finish rendering. We will then replace the stale content
with the new tiles.

In order to accomplish this we add a new StaleTileState which will hold
onto the stale tiles along with a scale factor to use for painting. This
new state will get initialized in four different places if it is not
already:
- willRepaintTile
- willRemoveTile
- willRepaintAllTiles
- tilingScaleFactorDidChange

In relation to this specific bug the first time this state is created
is when handling the tilingScaleFactorDidChange callback. This is
(at least now with the change in this patch) the first callback that
the TiledBacking calls when this change occurs. The async renderer will
take this opportunity to cache the previous scale factor, which is
needed because we will need it to properly translate the tile rects to
painting space when comparing them with the page bounds.

Afterwards, the TiledBacking will call willRepaintAllTiles and we will
then cache all of the tiles in the previously initialized state.

At some point later the TileGrid will revalidate its tiles which
may result it in calling willRepaintTile or willRemoveTile. The reason
why we may need to recreate the StaleTileState in these callbacks is
because we may have already received new content to show while waiting
for this revalidation to occur.

In our main painting loop we will check to see if we have stale content
to consider. If we do we will first try to see if our set of currently
rendered tiles is enough to paint. We do this by passing the tile indices of
the rendered tiles to the TiledBacking to compare with the coverage
rect. The TiledBacking will tell us if its coverage rect is completely
contained within the set of tiles we gave it. If this is the case
then the async renderer will destroy its StaleTileState and paint the
newly rendered content. Otherwise, it will painted the stale tiles it is
holding onto.

* Source/WebCore/platform/graphics/TiledBacking.h:
* Source/WebCore/platform/graphics/ca/TileController.cpp:
(WebCore::TileController::setContentsScale):
(WebCore::TileController::containsCoverageRect const):
* Source/WebCore/platform/graphics/ca/TileController.h:
* Source/WebCore/platform/graphics/ca/TileGrid.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.mm:
(WebKit::AsyncPDFRenderer::willRepaintTile):
(WebKit::AsyncPDFRenderer::willRemoveTile):
(WebKit::AsyncPDFRenderer::willRepaintAllTiles):
(WebKit::AsyncPDFRenderer::tilingScaleFactorDidChange):
(WebKit::AsyncPDFRenderer::paintTilesForPage):
(WebKit::AsyncPDFRenderer::StaleTileState::StaleTileState):